* elinks (and possibly others) bypass the terminal and talk directly to X to
  restore the window title when exiting. tmux can't know about this particular
  bit of stupidity so the title ends up strange - the prefix isn't terribly
  important and elinks is quite useful so just get rid of it.

27 November 2008

* Tweaks to support Dragonfly.

17 November 2008

* tmux 0.5 released.

16 November 2008

* New window option: "utf8"; this must be on (it is off by default) for UTF-8
  to be parsed. The global/session option "utf8-default" controls the setting
  for new windows.

  This means that by default tmux does not handle UTF-8. To use UTF-8 by
  default it is necessary to a) "set utf8-default on" in .tmux.conf b) start
  tmux with -u on any terminal which support UTF-8.

  It seems a bit unnecessary for this to be a per-window option but that is
  the easiest way to do it, and it can't do any harm...
* Enable default colours if op contains \033[39;49m, based on a report from
  fulvio ciriaco.

12 November 2008

* Keep stack of last windows rather than just most recent; based on a diff from
  joshe.

04 November 2008

* Don't try to redraw status line when showing a prompt or message; if it does,
  the status timer is never reset so it redraws on every loop. Spotted by
  joshe.

09 October 2008

* Translate 256 colours into 16 if 256 is not available, same as screen does.
* Better support for OSC command (only to set window title now), and also
  support using APC for the same purpose (some Linux default shell profiles do
  this).

25 September 2008

* Large internal rewrite to better support 256 colours and UTF-8. Screen data
  is now stored as single two-way array of structures rather than as multiple
  separate arrays. Also simplified a lot of code.

  Only external changes are three new flags, -2, -d and -u, which force tmux to
  assume the terminal supports 256 colours, default colours (useful for